--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
 	"description": "A simple webpack example with amd",
 	"main": "main.js",
 	"scripts": {
-		"test": "webpack --config webpack.config.js"
+		"build": "webpack --config webpack.config.js"
 	},
 	"repository": {
 		"type": "git",
@@ -17,8 +17,12 @@
 	"author": "liuyzhm",
 	"license": "MIT",
 	"dependencies": {
+		"html-webpack-plugin": "^4.3.0",
+		"lodash": "^4.17.15",
 		"webpack": "^4.43.0",
 		"webpack-cli": "^3.3.12"
 	},
-	"devDependencies": {}
+	"devDependencies": {
+		"clean-webpack-plugin": "^3.0.0"
+	}
 }
