--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
 		"webpack-cli": "^3.3.12"
 	},
 	"devDependencies": {
+		"axios": "^0.19.2",
 		"clean-webpack-plugin": "^3.0.0",
 		"webpack-dev-server": "^3.11.0"
 	}
